<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/primary"
        android:gravity="center_vertical"
        android:id="@+id/filterMeals"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseMeal"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:textSize="16dp"
            >

        </TextView>

        <Spinner
            android:id="@+id/mealTypeS"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/NewRecipeStyle"
        android:theme="@style/NewRecipeStyle"
        app:startIconDrawable="@drawable/searchicon"
        android:textColorHint="@color/primary"
        app:boxStrokeColor="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="0dp"
        android:layout_below="@id/filterMeals"
        android:hint="@string/search"
        android:id="@+id/searching">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/searchET"
        >

    </EditText>

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seznamReceptovRV"
        android:scrollbars="vertical"
        android:layout_below="@id/searching"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addRecipeBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/addrecipe"
        android:contentDescription="@string/addRecipe"
        android:layout_margin="40dp"
        android:backgroundTint="@color/primary"
        android:onClick="addRecipeBTN"
        >

    </com.google.android.material.floatingactionbutton.FloatingActionButton>


</RelativeLayout>